# default-artifacts

./: .gitignore  BUILD.md  Cargo.toml  README.md  artifacts-index.json  artifacts.toml  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml
drivers/murmur-driver-anthropic/: Cargo.toml  README.md  murmur.yaml
drivers/murmur-driver-anthropic/src/: lib.rs
drivers/murmur-driver-deepseek/: Cargo.toml  README.md  murmur.yaml
drivers/murmur-driver-deepseek/src/: lib.rs
drivers/murmur-driver-openai/: Cargo.toml  README.md  murmur.yaml
drivers/murmur-driver-openai/src/: lib.rs
hooks/murmur-hook-compact/: Cargo.toml  README.md  murmur.yaml
hooks/murmur-hook-compact/src/: lib.rs
hooks/murmur-hook-debug/: Cargo.toml  README.md  murmur.yaml
hooks/murmur-hook-debug/src/: lib.rs
hooks/murmur-hook-diff-summary/: Cargo.toml  README.md  murmur.yaml
hooks/murmur-hook-diff-summary/src/: lib.rs
hooks/murmur-hook-eval/: Cargo.toml  README.md  murmur.yaml
hooks/murmur-hook-eval/src/: lib.rs
hooks/murmur-hook-grafana/: Cargo.toml  README.md  murmur.yaml
hooks/murmur-hook-grafana/src/: lib.rs
hooks/murmur-hook-memory-jsonl/: Cargo.toml  README.md  murmur.yaml
hooks/murmur-hook-memory-jsonl/src/: lib.rs
hooks/murmur-hook-shell-desc/: Cargo.toml  README.md  murmur.yaml
hooks/murmur-hook-shell-desc/src/: lib.rs
scripts/: apply-versions.sh  check-build-coverage.sh  check-wit-sync.sh  local-install.sh  validate-component.sh
skills/murmur-skill-create-manifest/: README.md  murmur.yaml  skill.md
skills/murmur-skill-investigation-checkpoint/: README.md  murmur.yaml  skill.md
tools/murmur-tool-code-coverage/: Cargo.toml  README.md  murmur.yaml  package.sh
tools/murmur-tool-code-coverage/src/: db.rs  lcov.rs  main.rs  ops.rs  out.rs  resolve.rs
tools/murmur-tool-code-coverage/tests/: code_coverage_integration.rs
tools/murmur-tool-code-graph/: Cargo.toml  README.md  murmur.yaml  package.sh
tools/murmur-tool-code-graph/src/: db.rs  main.rs  ops.rs  out.rs  parse.rs
tools/murmur-tool-code-graph/tests/: code_graph_integration.rs
tools/murmur-tool-create/: Cargo.toml  README.md  murmur.yaml
tools/murmur-tool-create/src/: lib.rs
tools/murmur-tool-create/tests/: wasm_component.rs
tools/murmur-tool-editor/: Cargo.toml  README.md  murmur.yaml
tools/murmur-tool-editor/src/: lib.rs
tools/murmur-tool-editor/tests/: wasm_component.rs
tools/murmur-tool-git/: Cargo.toml  README.md  murmur.yaml  package.sh
tools/murmur-tool-git/src/: main.rs  resolve.rs
tools/murmur-tool-git/tests/: git_tool.rs  git_tool_integration.rs  symbol_history.rs
tools/murmur-tool-git/validate/: Cargo.toml
tools/murmur-tool-git/validate/src/: main.rs
tools/murmur-tool-registry-search/: Cargo.toml  README.md  murmur.yaml  package.sh
tools/murmur-tool-registry-search/src/: main.rs
tools/murmur-tool-request-input/: Cargo.toml  README.md  murmur.yaml
tools/murmur-tool-request-input/src/: lib.rs
tools/murmur-tool-test-report/: Cargo.toml  README.md  murmur.yaml  package.sh
tools/murmur-tool-test-report/src/: main.rs  ops.rs  out.rs  parse.rs  resolve.rs
tools/murmur-tool-test-report/tests/: test_report_integration.rs
tools/murmur-tool-test-report/tests/fixtures/: cargo_test.txt  go_test.txt  jest.txt  pytest.txt
wit/guest/: worlds.wit
wit/hook/: inference.wit  worlds.wit
