[package]
name = "murmur-driver-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasip2 = "1.0.4"
