[package]
name = "murmur-tool-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json.workspace = true
regex = "1"
walkdir = "2"
wit-bindgen.workspace = true

# Host-target-only. Used solely by tests/wasm_component.rs to instantiate the compiled
# wasm32-wasip2 component and prove behavior parity + the find_in_files benchmark against
# the real artifact. Never a build-time dependency of the wasm target itself — a
# `[dev-dependencies]` entry is excluded from the cdylib the component is built from.
[dev-dependencies]
wasmtime = "46"
wasmtime-wasi = "46"
