[package]
name = "murmur-tool-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "murmur-tool-git"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[dev-dependencies]
# Used by the symbol_history integration suite to hand-build a code-graph
# fixture db matching murmur-tool-code-graph's documented schema (this tool
# cannot link that binary-only crate as a library).
rusqlite.workspace = true
