[package]
name = "murmur-tool-registry-search"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "murmur-tool-registry-search"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
